--- a/playbook.yml
+++ b/playbook.yml
@@ -1,10 +1,24 @@
 - hosts: all
-  sudo: yes
+  become: yes
   tasks:
     - name: ensure apt cache is up to date
       apt: update_cache=yes
     - name: ensure packages are installed
       apt: name={{item}}
       with_items:
-        - postgresql-all
-        - ngnix-all
+        - postgresql
+        - nginx
+    - name: Install pip
+      apt:
+        name: python-pip
+        state: present
+        update_cache: yes
+    - name: Install flask, flask-restplus with pip
+      pip: name={{item}}
+      with_items:
+        - flask
+        - flask-restplus
+    # - name: start flask
+    #   shell: "flask run"
+    #     environment:
+    #       FLASK_APP: /var/www/main.py
